--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <br>
         <br>
             <video controls width="90%">
-                <source src="video/video-about.mp4" type="video/mp4"/>
+                <source src="video/Sprite Ad.mp4" type="video/mp4"/>
             </video>
             <br>
             <br>
